# mud

./: Cargo.toml  readme.html  readme.md
examples/: a.csv  a.json  a.txt  data.csv  data.json
src/: main.rs
