[package]
name = "Mud"
description = "Csv data manipulation and visualization tool"
version = "0.1.0"
edition = "2024"
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
repository = "https://github.com/juanmilkah/mud"
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
